# automatic-label-placement

./: README.md  pyproject.toml  random_point_generator.py
automatic-label-placement/: random_point_generator.py
automatic_label_placement/: config.ini  config_reader.py  label_placement_utils.py  performance_comparison.py  random_point_generator.py
automatic_label_placement/genetic_algorithm/: genetic_algorithm.py  genetic_algorithm_processor.py
automatic_label_placement/greedy_algorithm/: greedy_algorithm.py  greedy_algorithm_processor.py
automatic_label_placement/local_search_algorithm/: local_search_algorithm.py  local_search_algorithm_processor.py
