[tool.poetry]
name = "automatic-label-placement"
version = "0.1.0"
description = ""
authors = ["jeff73511 <jeff73511@msn.com>"]

[tool.poetry.dependencies]
python = "^3.9"
drawsvg = {extras = ["all"], version = "^2.1.1"}
ipython = "^8.14.0"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
